style.css
*,*::before,*::after {
    box-sizing: border-box;
}

body {
    margin:1em;
    padding:2em;
    border: 0.1rem solid black;
    border-radius: 1rem;
    font-family: 'Segoe UI';
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden ;
}

.header {
    display:flex;
    flex-direction: column;
    align-items: center;
    width:100%;
    margin:1em;
}

.timeline {
    display: grid;
    grid-template-columns: 1fr .1rem 2fr;
    
    
}
.timeline__component { 
     margin:1rem;
}

.timeline__date--right{
    text-align: right;
}
.timeline__middle{
    position:relative;
    background: black;
}
.timeline__dot{
    position: absolute;
    top:0;
    left:50%;
    width:15px;
    height:15px;
    background: black;
    border-radius: 50%;
    transform:translateX(-50%);
}





.changelog__button {
    background-color: #000000;
    color:white;
    font-size: 1rem;
    padding:1em;
    border-radius: 0.5rem;
    margin:1em
}

